# ndarray

./: CMakeLists.txt  Comparisons.md  README.md  ndarray.hpp  ndarray_test.cpp
nd/: Array.hpp  ColMajorOrder.hpp  RowMajorOrder.hpp  Serialize.hpp  Shape.hpp  TriangleOrder.hpp  ZOrder.hpp  ndarray.hpp
nd/src/: ContiguousMemView.hpp  ContiguousOrderBase.hpp  LayoutBase.hpp  Operators.hpp  StorageOrderBase.hpp
nd_ext/: CMakeLists.txt
nd_ext/cimg/: CMakeLists.txt  display.cpp  display.hpp
nd_ext/image/: CMakeLists.txt  image.cpp  image.hpp
nd_operations/: Border.hpp  Convolve.hpp
